--- a/carritoDe-compras/src/App.css
+++ b/carritoDe-compras/src/App.css
@@ -1,9 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
 .logo {
   height: 6em;
@@ -34,9 +28,22 @@
 }
 
 .card {
-  padding: 2em;
+  width: 18rem;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+.btn-add{
+  color: aqua;
+  height: 90px;
+  padding: 10px;
+  color: #262626;
+  border: 1px solid black;
+  background-color: rgb(255, 255, 255);
+}
+
+.btn-add:hover{
+  background-color: #262626;
 }
